Migração da biblioteca de conversão de JSON